[tool.poetry]
name = "ia-master"
version = "0.1.0"
description = "Aprendendo sobre IAs e como utilizá-las"
authors = ["Kauanrodrigues01m <kauanrl09@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
langchain-groq = "^0.2.3"
langchain-community = "^0.3.14"
pypdf = "^5.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
